@@ -6,7 +6,7 @@ SET(JSC_LIBRARIES
     ${JavaScriptCore_LIBRARY_NAME}
 )
 
-INCLUDE_IF_EXISTS(${JAVASCRIPTCORE_DIR}/shell/Platform${PORT}.cmake)
+WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS()
 
 WEBKIT_WRAP_SOURCELIST(${JSC_SOURCES})
 INCLUDE_DIRECTORIES(./ ${JavaScriptCore_INCLUDE_DIRECTORIES})
